hphp/hack/test/typecheck/new_inference/disjunctions/generics_sub_nullable_tvar.php.legacy.exp
File "generics_sub_nullable_tvar.php", line 7, characters 3-3:
Some type constraint(s) here are violated (Typing[4110])
File "generics_sub_nullable_tvar.php", line 4, characters 12-13:
'T1' is a constrained type parameter
File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
This is a string
File "generics_sub_nullable_tvar.php", line 6, characters 31-32:
It is incompatible with a value of generic type T2
File "generics_sub_nullable_tvar.php", line 11, characters 3-3:
Some type constraint(s) here are violated (Typing[4110])
File "generics_sub_nullable_tvar.php", line 4, characters 12-13:
'T1' is a constrained type parameter
File "generics_sub_nullable_tvar.php", line 4, characters 18-23:
This is a string
File "generics_sub_nullable_tvar.php", line 10, characters 28-29:
It is incompatible with a value of generic type T2
